--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,10 +5,15 @@ edition = "2024"
 
 [dependencies]
 # TODO: add features to expose the different build options for sdl3
-sdl3 = { version = "0.14.33", features = ["raw-window-handle"] }
+sdl3 = { version = "0.14.33", features = ["raw-window-handle", "build-from-source"] }
 bevy_app = { version = "0.16", default-features = false }
 bevy_derive = { version = "0.16" }
 bevy_ecs = { version = "0.16" }
 bevy_window = { version = "0.16" }
 tracing = "0.1.41"
-wgpu-types = { version = "25", optional = true }
+raw-window-handle = { version = "0.6", features = [
+  "alloc",
+], default-features = false }
+
+[dev-dependencies]
+bevy = "0.16.1"
