--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ sdl3 = { version = "0.14.33", features = ["raw-window-handle", "build-from-sourc
 bevy_app = { version = "0.16", default-features = false }
 bevy_derive = { version = "0.16" }
 bevy_ecs = { version = "0.16" }
+bevy_input = { version = "0.16" }
 bevy_window = { version = "0.16" }
 tracing = "0.1.41"
 raw-window-handle = { version = "0.6", features = [
