--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ bevy_app = { version = "0.16", default-features = false }
 bevy_derive = { version = "0.16" }
 bevy_ecs = { version = "0.16" }
 bevy_input = { version = "0.16" }
+bevy_math = { version = "0.16" }
 bevy_window = { version = "0.16" }
 tracing = "0.1.41"
 raw-window-handle = { version = "0.6", features = [
